--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,8 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeflex/primeflex.css",
-              "node_modules/quill/dist/quill.snow.css"
+              "node_modules/quill/dist/quill.snow.css",
+              "node_modules/angular-calendar/css/angular-calendar.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/assets/scss"]
