--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~13.3.0",
     "@ngneat/hot-toast": "^4.1.0",
     "@ngneat/overview": "^3.0.0",
+    "angular-calendar": "^0.29.0",
+    "date-fns": "^2.28.0",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.3",
