--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeflex/primeflex.css",
               "node_modules/quill/dist/quill.snow.css",
-              "node_modules/angular-calendar/css/angular-calendar.css"
+              "node_modules/angular-calendar/css/angular-calendar.css",
+              "node_modules/flatpickr/dist/flatpickr.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/assets/scss"]
