--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@ngneat/hot-toast": "^4.1.0",
     "@ngneat/overview": "^3.0.0",
     "angular-calendar": "^0.29.0",
+    "angularx-flatpickr": "^6.6.0",
     "date-fns": "^2.28.0",
+    "flatpickr": "^4.6.13",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.3",
     "quill": "^1.3.7",
+    "rrule": "^2.6.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
