--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngneat/overview": "^3.0.0",
     "angular-calendar": "^0.29.0",
     "angularx-flatpickr": "^6.6.0",
+    "chart.js": "^4.0.1",
     "date-fns": "^2.28.0",
     "flatpickr": "^4.6.13",
     "primeflex": "^3.1.3",
