--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@capacitor/core": "^4.0.1",
     "@ngneat/hot-toast": "^4.1.0",
     "@ngneat/overview": "^3.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "angular-calendar": "^0.29.0",
     "angularx-flatpickr": "^6.6.0",
     "chart.js": "^4.0.1",
